--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
+    "lint": "^0.7.0",
     "moment": "^2.29.4",
     "mongoose": "^6.6.2",
     "morgan": "~1.10.0"
